MCR-3386 migrate remaining tests in mycore-user2 to JUnit 5 (#2494)